--- a/api/dish/models/dish.settings.json
+++ b/api/dish/models/dish.settings.json
@@ -1,5 +1,5 @@
 {
-  "kind": "collectionType",
+  "connection": "default",
   "collectionName": "dishes",
   "info": {
     "name": "dish",
@@ -7,23 +7,23 @@
   },
   "options": {
     "increments": true,
-    "timestamps": true,
-    "draftAndPublish": true
+    "timestamps": [
+      "created_at",
+      "updated_at"
+    ],
+    "comment": ""
   },
   "attributes": {
     "name": {
       "type": "string"
     },
+    "description": {
+      "type": "text"
+    },
     "image": {
       "model": "file",
       "via": "related",
-      "allowedTypes": [
-        "images",
-        "files",
-        "videos"
-      ],
-      "plugin": "upload",
-      "required": false
+      "plugin": "upload"
     },
     "price": {
       "type": "decimal"
@@ -31,9 +31,6 @@
     "restaurant": {
       "model": "restaurant",
       "via": "dishes"
-    },
-    "description": {
-      "type": "text"
     }
   }
 }
