--- a/package.json
+++ b/package.json
@@ -7,34 +7,43 @@
     "develop": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
-    "strapi": "strapi"
+    "strapi": "strapi",
+    "lint": "eslint ."
   },
   "dependencies": {
-    "pg": "^8.8.0",
-    "pg-connection-string": "^2.5.0",
-    "strapi": "3.3.4",
-    "strapi-admin": "3.3.4",
-    "strapi-connector-bookshelf": "^3.6.10",
-    "strapi-connector-mongoose": "3.3.4",
-    "strapi-plugin-content-manager": "3.3.4",
-    "strapi-plugin-content-type-builder": "3.3.4",
-    "strapi-plugin-email": "3.3.4",
-    "strapi-plugin-graphql": "3.3.4",
-    "strapi-plugin-upload": "3.3.4",
-    "strapi-plugin-users-permissions": "3.3.4",
-    "strapi-provider-upload-aws-s3": "^3.0.0-beta.20.3",
-    "strapi-utils": "3.3.4",
-    "stripe": "^10.8.0"
+    "bootstrap": "^5.1.3",
+    "graphql": "^16.0.1",
+    "knex": "0.21.18",
+    "object-assign": "^4.1.1",
+    "pg": "^8.7.1",
+    "redis": "^3.1.2",
+    "redis-commands": "^1.7.0",
+    "semver": "^7.3.5",
+    "sqlite3": "5.0.0",
+    "strapi": "3.6.8",
+    "strapi-admin": "3.6.8",
+    "strapi-connector-bookshelf": "3.6.8",
+    "strapi-plugin-content-manager": "3.6.8",
+    "strapi-plugin-content-type-builder": "3.6.8",
+    "strapi-plugin-email": "3.6.8",
+    "strapi-plugin-graphql": "^3.6.8",
+    "strapi-plugin-i18n": "3.6.8",
+    "strapi-plugin-upload": "3.6.8",
+    "strapi-plugin-users-permissions": "3.6.8",
+    "strapi-provider-upload-cloudinary": "^3.6.8",
+    "strapi-utils": "3.6.8",
+    "stripe": "^8.186.1",
+    "whatwg-fetch": "^3.6.2"
   },
   "author": {
-    "name": "A Strapi developer"
+    "name": "A Strapi developer + updates john R Williams jrw@mit.edu"
   },
   "strapi": {
-    "uuid": "74debfce-91d3-46dc-bcb3-737dc586d944"
+    "uuid": "a45046ad-52e3-426c-a7aa-25c5de132bfe"
   },
   "engines": {
-    "node": ">=10.16.0 <=14.x.x",
-    "npm": ">=6.0.0"
+    "node": "14.17.6",
+    "npm": "8.1.3"
   },
   "license": "MIT"
 }
